tests/ui/recursion/issue-26548-recursion-via-normalize.stderr
error[E0391]: cycle detected when computing layout of `S`
   |
   = note: ...which requires computing layout of `core::option::Option<<S as Mirror>::It>`...
   = note: ...which requires computing layout of `core::option::Option<S>`...
   = note: ...which again requires computing layout of `S`, completing the cycle
note: cycle used when running const prop lints for `main`
  --> $DIR/issue-26548-recursion-via-normalize.rs:15:1
   |
LL | fn main() {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
